# ipa-tokenizer

./: Makefile  README.md  pyproject.toml  requirements.txt
ipa_tokenizer/: __main__.py  corrections.py  debug.py  inventories.csv  inventories.py  languages.json  languages.py  tokenizer.py
test/: conftest.py  test_corrections.py  test_tokenizer.py
tools/: language_codes.py  search.py  ties.py
tools/data/: phoible.csv  wiktionary.txt
