[project]
name = "ipa-tokenizer"
version="0.1.0"
authors = [
	{ name = "Levi Gruspe" },
]
description = "IPA transcription tokenizer"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["ipa", "linguistics", "tokenizer", "transcription"]
classifiers = [
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Programming Language :: Python :: 3",
]
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://github.com/lggruspe/ipa-tokenizer"
"Bug Tracker" = "https://github.com/lggruspe/ipa-tokenizer/issues"

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"
